2009-03-16  Alberto Garcia  <agarcia@igalia.com>

	* src/util.h
	* src/util.c (xml_add_glong, xml_get_glong, xml_get_string)
	(xml_find_node):
	Added xml_find_node(), xml_add_glong() and xml_get_glong()

2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (get_xml_tag_name)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk)
	(vgl_bookmark_mgr_save_to_disk)
	* src/xmlrpc.c (string_param, array_param):
	Refactor code using xml_add_string() and xml_get_string() from
	util.c

2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/util.h
	* src/util.c
	(xml_add_string, xml_get_string, xml_get_bool):
	Extra checks for parameters.
	(xml_get_string, xml_get_bool):
	Allow passing NULL nodes (= empty lists) as parameter.
	Return the node, or NULL if not found.

2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/userconfig.c
	* src/util.h
	* src/util.c
	(xml_add_string, xml_add_bool, xml_get_string, xml_get_bool):
	Moved from userconfig.c to util.c, as they're useful for other
	modules too.

2009-03-13  Alberto Garcia  <agarcia@igalia.com>

	* TRANSLATORS
	* po/LINGUAS
	* po/pl.po
	* src/uimisc.c (ui_about_dialog):
	Added Polish translation, by Dawid Pakuła

2009-03-06  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_play_similarartist_radio):
	Use current artist (if any) as default value in the "Artists
	similar to" dialog.

	This closes feature request #3575

2009-03-06  Alberto Garcia  <agarcia@igalia.com>

	* src/Makefile.am
	* src/marshal.list
	* src/controller.c (vgl_controller_class_init):
	Define a new 'playback-progress' signal to be emitted by the
	controller.

	* src/vgl-main-window.h
	* src/vgl-main-window.c (vgl_main_window_new)
	(vgl_main_window_controller_progress_cb)
	* src/controller.h
	* src/controller.c (controller_update_progress)
	(controller_audio_started_cb, controller_run_app):
	Control the main window's progress bar using the
	'playback-progress' signal.
